minor errors: about us dialog cancelable, home screen loading ui, initializing facts mv variables...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
 
     <string name="facts_title">Facts and Favs</string>
 
+    <string name="facts_fav_added">Added to fav. list</string>
+    <string name="facts_fav_duplicated">Fact already added</string>
+
     <!-- Facts Dialog -->
 
     <string name="facts_dialog_title">Do you want to add it to Favs list?</string>
